# mistral-ai-london-hack

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  PLAN.md  README.md  run.sh
agents/: marcus.json
backend/: .env.example  API.md  channel_agents.json  pyproject.toml  run.sh  test_voice_e2e.py
backend/agents/: dan.json  emma.json  kim.json  marcus.json  pa.json  sofia.json
backend/logs/: turns.jsonl
backend/src/ensemble/: __main__.py  config.py  discord_bot.py  discord_main.py  discord_voice.py  events.py  main.py  utils.py
backend/src/ensemble/agents/: models.py  registry.py
backend/src/ensemble/api/: routes.py  ws.py
backend/src/ensemble/conversations/: manager.py  models.py
backend/src/ensemble/oracle/: engine.py  turn_logger.py
backend/src/ensemble/tools/: slides.py
backend/src/ensemble/voice/: __init__.py  stt.py  tts.py
backend/tests/: test_e2e.py  test_unit.py  test_ws.py
frontend/: .env  .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: app.tsx  config.ts  index.css
frontend/src/api/: client.ts  eventsWs.ts  ws.ts
frontend/src/hooks/: useActivityFeed.ts  useAgents.ts  useConversation.ts  useVoice.ts  useWebSocket.ts
frontend/src/mocks/: agents.ts
frontend/src/state/: activity.ts  agents.ts  call.ts  conversations.ts  oracle.ts  ui.ts
frontend/src/types/: index.ts
md/: discord-frontend-review.md  iteration-1-engineer-review.md  iteration-1-fixes.md  iteration-1-pm-requirements.md  iteration-2-fixes.md  iteration-2-review.md  iteration-3-final-review.md  ralph-loop-1-pm-analysis.md
(+34 files in other folders)
